--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -221,10 +221,15 @@ a {
     align-items: center;
     justify-content: center;
     opacity: 0;
+    transition: ease-in-out 0.6s;
   }
 
   .blur {
     backdrop-filter: blur(5px);
+  }
+
+  .no-blur {
+    backdrop-filter: blur(0);
   }
  
   .overlay:hover{
