--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -45,7 +45,7 @@ a {
 
 .flex {
     display: flex;
-    gap: var(--gap, 1rem);
+    /* gap: var(--gap, 1rem); */
 }
 
 .logo {
@@ -221,11 +221,13 @@ a {
     align-items: center;
     justify-content: center;
     opacity: 0;
+    font-weight: 500px;
+    font: black;
     transition: ease-in-out 0.6s;
   }
 
   .blur {
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(3px);
   }
 
   .no-blur {
