--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -43,6 +43,8 @@ a {
     background-color: rgba(255, 255, 255, 0);
 }
 
+
+
 .flex {
     display: flex;
     /* gap: var(--gap, 1rem); */
@@ -203,6 +205,16 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-items: center;
     /* display: flex; */
+  }
+
+  .parent-flex-small{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 3.9vh;
+    /* font-size: 30px; */
+    padding: 20px 25px 30px 25px;
+    align-items: center;
   }
 
   .progImg {
