--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -8,6 +8,8 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
+    transition: color .3s ease,background-color .3s ease;
+    /* -webkit-transition: color .3s ease,background-color .3s ease; */
   }
 
 .header {
@@ -187,8 +189,35 @@ a {
   
 
   .services {
-    padding: 30px 0; 
+    padding: 15px 0; 
     position: relative;
+  }
+
+  .button {
+    padding: 0 25px 0 20px;
+    /* background-color: #D0ECBC; */
+    margin: 0 20px;
+    border-radius: 25px;
+    border-style: solid;
+    border-color: #669F3C;
+    color: #669F3C;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .left {
+    width: 30px;
+    height: 30px;
+    color: blue;
+  }
+
+  .button:hover {
+    background-color: #669F3C;
+    color: white;
+    border-style: solid;
+    border-color: #669F3C;
   }
 
   .footer {
