--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -8,6 +8,8 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
+    /* padding-left: 15%;
+    padding-right: 15%; */
     transition: color .3s ease,background-color .3s ease;
     /* -webkit-transition: color .3s ease,background-color .3s ease; */
   }
@@ -71,7 +73,6 @@ a {
     padding: 0;
     margin: 0 50px;
     font-weight: 600;
-
 }
 
 .space {
@@ -133,8 +134,11 @@ a {
     align-items: center;
 
 }
-.small-text{
-  font-size: 2.19vmin;
+.title-text{
+  font-size: 16px;
+}
+.small-text {
+  font-size: 16px;
 }
 
 .parent-flex {
@@ -227,13 +231,18 @@ a {
 
   .center {
     justify-content: center;
+    padding: 7px 0 10px 0;
   }
 
-  .services-list{
+  .services-list, .services-list-1{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-items: center;
-    /* display: flex; */
+    padding: 5px 0;
+  }
+
+  .username, .username-1 {
+    font-size: 14px;
   }
 
   .parent-flex-small{
@@ -244,11 +253,6 @@ a {
     /* font-size: 30px; */
     padding: 20px 25px 30px 25px;
     align-items: center;
-  }
-
-  .progImg {
-    /* position: relative;
-    width: 400px; */
   }
 
   .overlay {
@@ -292,7 +296,37 @@ a {
 
   /* Responsive layout - makes a one column-layout instead of a two-column layout */
   @media screen and (max-width: 600px) {
-    .flex-item-right, .flex-item-left, .left, .roll-image {
+    .flex-item-right, .flex-item-left, .left {
       flex: 100%;
     }
   }
+
+  
+  @media (max-width: 850px){
+    .body {
+      margin: auto;
+    }
+    .title-text {
+      font-size: 15px;
+      line-height: 180%;
+    }
+    .section-header {
+      font-size: 18px;
+      line-height: 180%;
+    }
+    .small-text {
+      font-size: 13px;
+    }
+    .services-list-1{
+      display: flex;
+      justify-content: center;
+    }
+    .content{
+      display: none;
+      
+    }
+    .username{
+      display: none;
+    }
+  }
+  
