--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -211,9 +211,16 @@ a {
   }
 
   .left {
+    padding: 0 20px 0 15px;
+  }
+
+  .right {
+    padding: 0 15px 0 20px;
+  }
+
+  .arrow {
     width: 30px;
     height: 30px;
-    color: blue;
   }
 
   .button:hover {
