--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -62,7 +62,7 @@ a {
     justify-content: space-between;
     position: sticky;
     top: 0;
-    width: 100%;
+    width: calc(100%-25px);
     background-color: rgba(255, 255, 255, 0.9);
     z-index: 100;
 }
@@ -311,11 +311,12 @@ a {
     }
     .inner-flex {
       display: flex;
-      flex-direction: column;
+      /* flex-direction: column; */
     }  
     .primary-navigation {
-      margin: 10px 0;
+      margin: 10px 25px 10px 0px;
     }
+    
   }
 
   
