--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -268,6 +268,10 @@ a {
     align-items: center;
   }
 
+  .proj-desc{
+    margin: 0 10px;
+    font-weight: 550;
+  }
   .overlay {
     display: flex;
     position: absolute;
@@ -279,7 +283,7 @@ a {
     align-items: center;
     justify-content: center;
     opacity: 0;
-    font-weight: 500px;
+    font-weight: 500;
     font: black;
     transition: ease-in-out 0.6s;
   }
