--- a/portfolio/projects/projects.css
+++ b/portfolio/projects/projects.css
@@ -43,6 +43,27 @@
     margin: 25px 0;
 }
 
+.descriptions {
+    font-size: 16px;
+    line-height: 1.6;
+    margin: 0 0 10px 0;
+}
+
+.table {
+    display: flex;
+    flex-direction: row;
+    align-items: space-between;
+    justify-content: center;
+}
+
+header, .rows {
+    display: flex;  /* aligns all child elements (flex items) in a row */
+  }
+  
+  .col {
+    flex: 1;        /* distributes space on the line equally among items */
+  }
+
 .subheading {
     font-weight: 900;
     font-size: 24px;
@@ -59,7 +80,7 @@
 }
 
 @media only screen and (max-width: 920px){
-    .description, .date {
+    .description, .descriptions, .date {
         font-size: 14px;
         line-height: 1.4;
     }
@@ -88,13 +109,58 @@
     margin: auto;
 }
 
-.port {
-    width: 25%;
+.video-embed {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+}
+.video-display {
+    width: 80%;
+    height: auto;
+}
+.bold {
+    font-weight: 600;
+}
+.port, .imgs {
+    width: 30%;
     margin: 0 30px;
+    border-radius: 16px;
 }
 
+.wire-section, .img-sections{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 @media only screen and (max-width: 775px){
-    .description, .date {
+    .wire-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .port {
+        width: 75%;
+        padding: 10px 0;
+        border-radius: 10px;
+    }
+    .img-sections {
+        padding: 0 10px;
+    }
+    .imgs {
+        width: 40%;
+        margin: 0 10px;
+    }
+    .table {
+        display: flex;
+        flex-direction: column;
+        align-items: space-between;
+        justify-content: center;
+    }
+    .description, .descriptions, .date {
         font-size: 12px;
         line-height: 1.2;
     }
