adding content for gauge me

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -44,7 +44,7 @@ a {
     font-weight: bolder;
     width: 50px;
     color: #D0ECBC;
-    margin: 0 0 0 20px;
+    padding: 0 0 0 20px;
     background-color: rgba(255, 255, 255, 0);
 }
 
