made slides and video responsive

--- a/portfolio/projects/projects.css
+++ b/portfolio/projects/projects.css
@@ -15,6 +15,35 @@
     margin: 5px 0;
 }
 
+.video-container { 
+    position: relative; 
+    padding-bottom: 56.25%; 
+    padding-top: 30px; 
+    height: 0; 
+    overflow: hidden; 
+}
+
+.body-text-big {
+    width: 55%;
+    margin: auto;
+}
+
+iframe[src*="docs.google.com"],
+iframe[src*="youtube.com"],
+iframe[src*="player.vimeo.com"]{
+  width: 100%;
+  height: auto;
+  aspect-ratio: 16 / 9;
+}
+
+.video-container iframe, .video-container object, .video-container embed { 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+}
+
 .subhead {
     display: flex;
     align-items: center;
@@ -156,6 +185,10 @@ header, .rows {
     justify-content: center;
 }
 @media only screen and (max-width: 775px){
+    .body-text-big {
+        width: 75%;
+        margin: auto;
+    }
     .wire-section{
         display: flex;
         flex-direction: column;
