--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -124,6 +124,7 @@ a {
     vertical-align: center;
     display: flex;
     align-items: center;
+    padding: 0 20px;
 }
 .green-font {
     color: #80B957;
@@ -242,11 +243,22 @@ a {
     padding: 7px 0 10px 0;
   }
 
-  .services-list, .services-list-1{
+  .services-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-items: center;
     padding: 15px 0;
+  }
+
+ .services-list-1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 30px;
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-items: center;
+    padding: 15px 0; */
   }
 
   .username, .username-1 {
@@ -349,8 +361,10 @@ a {
       display: none;
       
     }
+  }
+  
+  @media (max-width: 1000px){
     .username{
       display: none;
     }
   }
-  
