--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,18 +1,10 @@
-/* * {
-  padding: 0px;
-  margin: 0px;
-} */
-
 body {
     font-family: "Inter", sans-serif;
     overflow-x: hidden;
     max-width: 100%;
     margin: 0;
     padding: 0;
-    /* padding-left: 15%;
-    padding-right: 15%; */
     transition: color .3s ease,background-color .3s ease;
-    /* -webkit-transition: color .3s ease,background-color .3s ease; */
   }
 
 .header {
@@ -48,8 +40,6 @@ a {
     background-color: rgba(255, 255, 255, 0);
 }
 
-
-
 .flex {
     display: flex;
 }
@@ -65,7 +55,6 @@ a {
     top: 0;
     width: 100%;
     overflow-x: hidden;
-    /* width: calc(100% - 25px); */
     background-color: rgba(255, 255, 255, 0.9);
     z-index: 100;
 }
@@ -151,7 +140,6 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     font-size: 3.9vh;
-    /* font-size: 30px; */
     padding: 20px 45px 30px 45px;
     align-items: center;
   }
@@ -195,7 +183,6 @@ a {
     border-radius: 4%;
     width: 100%;
   }
-  
 
   .services {
     padding: 15px 0 0 0; 
@@ -204,7 +191,6 @@ a {
 
   .button {
     padding: 0 25px 0 20px;
-    /* background-color: #D0ECBC; */
     margin: 0 20px;
     border-radius: 25px;
     border-style: solid;
@@ -237,7 +223,6 @@ a {
   }
 
   .footer {
-    /* background-color: #D0ECBC; */
     padding: 7px;
   }
 
@@ -247,8 +232,6 @@ a {
   }
 
   .services-list{
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
     justify-items: center;
     padding: 15px 0;
     display: flex;
@@ -260,10 +243,6 @@ a {
     align-items: center;
     justify-content: center;
     padding: 15px 30px;
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    justify-items: center;
-    padding: 15px 0; */
   }
 
   .username, .username-1 {
@@ -279,7 +258,6 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     font-size: 3.9vh;
-    /* font-size: 30px; */
     padding: 20px 25px 30px 25px;
     align-items: center;
   }
@@ -289,7 +267,7 @@ a {
     font-weight: 550;
     font-size: 16px;
   }
-  .long {
+  .long, .long-1 {
     margin: 0 10px;
     font-weight: 550;
     font-size: 16px;
@@ -309,7 +287,7 @@ a {
     justify-content: center;
     opacity: 0;
     font-weight: 500;
-    font: black;
+    color: black;
     transition: ease-in-out 0.6s;
   }
 
@@ -324,16 +302,14 @@ a {
   .overlay:hover{
     opacity: 1;
   }
+
   .proj {
     flex: 1 0 30%;
-    /* max-width: 100%; */
     text-align: center;
     font-weight: 575;
-    /* position: relative; */
   }
 
   .proj-thumbnail {
-    /* width: 100%; */
     position: absolute;
   }
 
@@ -344,14 +320,11 @@ a {
     }
     .proj {
       flex: 1 0 80%;
-      /* max-width: 100%; */
       text-align: center;
       font-weight: 575;
-      /* position: relative; */
     }
     .inner-flex {
       display: flex;
-      /* flex-direction: column; */
     }  
     .primary-navigation {
       margin: 10px 25px 10px 0px;
@@ -368,14 +341,17 @@ a {
       font-weight: 550;
       font-size: 12px;
       display: initial;
-  }
-  .long{
-      display: none;
-  }
-    
+    }
+    .long-1 {
+      margin: 0 10px;
+      font-weight: 550;
+      font-size: 12px;
+    }
+    .long{
+        display: none;
+    }
   }
 
-  
   @media (max-width: 850px){
     .body {
       margin: auto;
@@ -385,10 +361,15 @@ a {
       font-weight: 550;
       font-size: 14px;
       display: initial;
-  }
-  .long{
-      display: none;
-  }
+    }
+    .long{
+        display: none;
+    }
+    .long-1 {
+      margin: 0 10px;
+      font-weight: 550;
+      font-size: 14px;
+    }
     .proj-desc{
       margin: 0 10px;
       font-weight: 550;
@@ -429,8 +410,8 @@ a {
       font-weight: 550;
       font-size: 14px;
       display: initial;
-  }
-  .long{
-    display: none;
-}
+    }
+    .long{
+      display: none;
+    }
   }
