--- a/portfolio/css/projects.css
+++ b/portfolio/css/projects.css
@@ -54,7 +54,9 @@ header, .rows {
     margin: auto;
 }
 .info-arch {
-    width: 80%;
+    width: 90%;
+    margin: 5px 30px;
+    border-radius: 16px;
 }
 .intro {
     display: flex;
@@ -70,7 +72,7 @@ header, .rows {
     padding: 0 15px 0 0;
 }
 .port, .imgs {
-    width: 30%;
+    width: 40%;
     margin: 5px 30px;
     border-radius: 16px;
 }
@@ -163,14 +165,14 @@ header, .rows {
         line-height: 1.2;
     }
     .imgs, .small-img {
-        width: 40%;
+        width: 50%;
         margin: 0 10px;
     }
     .img-sections {
-        padding: 0 10px;
+        padding: 7px 10px;
     }
     .port {
-        width: 75%;
+        width: 90%;
         padding: 10px 0;
         border-radius: 10px;
     }
