--- a/portfolio/css/projects.css
+++ b/portfolio/css/projects.css
@@ -71,9 +71,9 @@ header, .rows {
 .pad {
     padding: 0 15px 0 0;
 }
-.port, .imgs {
+.port, .imgs, .pam-wireframe {
     width: 30%;
-    margin: 5px 30px;
+    margin: 7px 30px;
     border-radius: 16px;
 }
 .proj-title {
@@ -170,6 +170,10 @@ header, .rows {
     }
     .img-sections {
         padding: 7px 10px;
+    }
+    .pam-wireframe {
+        width: 37%;
+        margin: 0 10px;
     }
     .port {
         width: 90%;
