--- a/portfolio/css/about-page.css
+++ b/portfolio/css/about-page.css
@@ -1,3 +1,4 @@
+/* body of the about page */
 .about-body-text{
     width: 85%;
     margin: auto;
@@ -19,6 +20,7 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+/* formatting for landscape images */
 .big-img {
     width: 45%;
     margin: 5px 10px;
@@ -28,6 +30,7 @@
     width: 91%;
     margin: auto;
 }
+/* parent flexbox that contains each row of the about page */
 .collage {
     display: flex;
     flex-direction: row;
@@ -35,19 +38,13 @@
     padding: 10px 0;
     justify-content: center;
 }
+/* image portion of each row */
 .collage-left {
     width: 60%;
 }
+/* text portion of each row */
 .collage-right{
     width: 30%;
-}
-.image-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    margin: 1em;
 }
 .phone-text {
     display: none;
@@ -66,6 +63,7 @@
     border-radius: 16px;
 }
 
+/* phone layout */
 @media only screen and (max-width: 775px){
     .phone-text {
         font-size: 12px;
@@ -73,6 +71,7 @@
     }
 }
 
+/* iPad layout */
 @media only screen and (max-width: 920px){
     .phone-text {
         font-size: 14px;
@@ -80,6 +79,7 @@
     }
 }
 
+/* minimized desktop layout */
 @media screen and (max-width: 1025px) {
     .abt-desc {
         display: none;
