--- a/portfolio/css/about-page.css
+++ b/portfolio/css/about-page.css
@@ -20,6 +20,11 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+/* previous and next arrows at the bottom of every project page */
+.arrow {
+    width: 30px;
+    height: 30px;
+}
 /* formatting for landscape images */
 .big-img {
     width: 45%;
@@ -71,7 +76,7 @@
     }
 }
 
-/* iPad layout */
+/* tablet layout */
 @media only screen and (max-width: 920px){
     .phone-text {
         font-size: 14px;
