--- a/portfolio/css/projects.css
+++ b/portfolio/css/projects.css
@@ -1,3 +1,4 @@
+/* format for the body of each project webpage */
 .body {
     line-height: 1.3;
 }
@@ -9,11 +10,13 @@
     width: 55%;
     margin: auto;
 }
+/* bold font */
 .bold {
     font-weight: 600;
 }
+/* distributes space on the line equally among columns in a flexbox */
 .col {
-    flex: 1;        /* distributes space on the line equally among items */
+    flex: 1;
 }
 .color-palette {
     width: 60%;
@@ -23,6 +26,7 @@
 .dark-green-font{
     font: #007D3E;
 }
+/* format for the calendar and group icon in the subhead of each project page */
 .date {
     font-size: 16px;
     line-height: 1.6;
@@ -36,6 +40,7 @@
     display: flex;
     flex-direction: column;
 }
+/* description text for each subheading on project pages */
 .description {
     font-size: 16px;
     line-height: 1.6;
@@ -49,6 +54,7 @@
 header, .rows {
     display: flex;  /* aligns all child elements (flex items) in a row */
 }
+/* image gallery flexbox for project pages */
 .img-section {
     display: flex;
     flex-direction: row;
@@ -58,21 +64,17 @@ header, .rows {
     width: 75%;
     margin: auto;
 }
+/* layout for information architecture image on Pamela's Diner page */
 .info-arch {
     width: 80%;
     margin: 5px 30px;
     border-radius: 16px;
 }
-.intro {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-}
 .logo-size {
     width: 20%;
     border-radius: 50%;
 }
+/* padding for images */
 .pad {
     padding: 0 15px 0 0;
 }
@@ -91,6 +93,7 @@ header, .rows {
     margin: 5px 30px;
     border-radius: 16px;
 }
+/* flexbox for project overview section at the top of each project page */
 .subhead {
     display: flex;
     align-items: center;
@@ -104,11 +107,13 @@ header, .rows {
     margin: 10px 0;
     color: #45992f;
 }
+/* flexbox for tables */
 .table {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
+/* YouTube video formatting */
 .video-container { 
     position: relative; 
     padding-bottom: 56.25%; 
@@ -140,26 +145,7 @@ header, .rows {
     align-items: center;
     justify-content: center;
 }
-
-@media only screen and (max-width: 920px){
-    .description, .descriptions, .date {
-        font-size: 14px;
-        line-height: 1.4;
-    }
-    .proj-title {
-        font-size: 28px;
-        padding: 0 30px;
-        font-weight: 600;
-    }
-    .subheading {
-        font-weight: 900;
-        font-size: 20px;
-        align-items: center;
-        margin: 10px 0;
-        color: #45992f;
-    }
-}
-
+/* phone layout */
 @media only screen and (max-width: 775px){
     .body-text-big {
         width: 75%;
@@ -216,5 +202,24 @@ header, .rows {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+}
+/* tablet layout */
+@media only screen and (max-width: 920px){
+    .description, .descriptions, .date {
+        font-size: 14px;
+        line-height: 1.4;
+    }
+    .proj-title {
+        font-size: 28px;
+        padding: 0 30px;
+        font-weight: 600;
+    }
+    .subheading {
+        font-weight: 900;
+        font-size: 20px;
+        align-items: center;
+        margin: 10px 0;
+        color: #45992f;
     }
 }
