--- a/portfolio/css/projects.css
+++ b/portfolio/css/projects.css
@@ -47,7 +47,7 @@
     border-radius: 16px;
 }
 .dark-green-font{
-    font: #007D3E;
+    color: #007D3E;
 }
 /* format for the calendar and group icon in the subhead of each project page */
 .date {
